<?xml version="1.0" encoding="utf-8"?>
<!--
    created by Deni Supriyatna
-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoVerifikasiKtpActivity"
    android:layout_margin="10dp">

    <TextView
        android:id="@+id/tv_lengkapi_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/complete_data"
        android:textAlignment="center"
        android:textColor="@android:color/holo_purple"
        android:textSize="15sp"
        android:layout_margin="5dp"/>

    <TextView
        android:id="@+id/tv_waktu_proses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_lengkapi_data"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/process_few_minutes"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:layout_margin="5dp"/>

    <ImageView
        android:id="@+id/iv_ktp_cirle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_waktu_proses"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:adjustViewBounds="true"
        android:src="@drawable/ktp_circle"/>

    <TextView
        android:id="@+id/tv_mohon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iv_ktp_cirle"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/prepare_id_card"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:layout_margin="5dp"/>

    <Button
        android:id="@+id/btn_ktp_mulai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@drawable/round"
        android:text="@string/start"
        android:textAllCaps="false"
        android:textColor="@android:color/white"/>


</androidx.constraintlayout.widget.ConstraintLayout>