<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="com.deni.kameraktp.HilihKintilActivity" />

        <variable
            name="activity"
            type="HilihKintilActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HilihKintilActivity"
        android:layout_margin="5dp">

        <Button
            android:id="@+id/btn_proses_hilih"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round"
            android:layout_margin="5dp"
            android:text="@string/hilih_kintil"
            android:textColor="@android:color/white"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_input_hilih"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btn_proses_hilih"
            android:layout_margin="5dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_input_hilih"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/input_hilih"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_output_hilih"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_proses_hilih"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="5dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_output_hilih"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/output_hilih"/>
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>